fix: 修复 Dameng agent 元数据测试